Finalized openapi and added banker supply
