# src/routes/nft.ts
@@ -11,18 +11,23 @@ export class NFTController {
 
         router.get('/hat/:id', (req, res, next) => {
             if (req.params.id) {
-                res.send(formatRes({
-                    name: "Joe Hat NFT"
-                }))
+                res.send(
+                    formatRes({
+                        name: 'Joe Hat NFT',
+                    })
+                )
             }
 
-            res.send(formatRes({
-                id: req.params.id,
-                external_url: "https://api.traderjoexyz.com/nft/hat/" + req.params.id,
-                name: "Joe Hat NFT #" + req.params.id,
-                description: "Redeemed a real HAT and burned 1 $HAT",
-                image: "https://ipfs.io/ipfs/QmaYPV2VKW5vHtD92m8h9Q4YFiukFx2fBWPAfCWKg6513s",
-            }))
+            res.send(
+                formatRes({
+                    id: req.params.id,
+                    external_url:
+                        'https://api.traderjoexyz.com/nft/hat/' + req.params.id,
+                    name: 'Joe Hat NFT #' + req.params.id,
+                    description: 'Redeemed a real HAT and burned 1 $HAT',
+                    image: 'https://ipfs.io/ipfs/QmaYPV2VKW5vHtD92m8h9Q4YFiukFx2fBWPAfCWKg6513s',
+                })
+            )
         })
 
         return router
