# src/routes/price.ts
@@ -1,13 +1,13 @@
-import express from "express"
-import { getRandomProvider } from "../provider"
-import { Address, BigNumberMantissa } from "../constants"
-import { BigNumber, Contract, ethers } from "ethers"
-import { decimalMultiplier } from "../util/decimal_multiplier"
+import express from 'express'
+import { getRandomProvider } from '../provider'
+import { Address, BigNumberMantissa } from '../constants'
+import { BigNumber, Contract, ethers } from 'ethers'
+import { decimalMultiplier } from '../util/decimal_multiplier'
 
 import JoeBarContractABI from '../../abi/JoeBar.json'
 import JoeFactoryABI from '../../abi/JoeFactory.json'
 import ERC20 from '../../abi/ERC20.json'
-import { formatRes } from "../util/format_res"
+import { formatRes } from '../util/format_res'
 
 const JoeFactoryContract = new ethers.Contract(
     Address.JOE_FACTORY_ADDRESS,
@@ -24,7 +24,7 @@ const XJoeContract = new ethers.Contract(
 const JoeContract = new ethers.Contract(
     Address.JOE_ADDRESS,
     ERC20,
-    getRandomProvider(),
+    getRandomProvider()
 )
 
 export class PriceController {
@@ -44,20 +44,18 @@ export class PriceController {
     }
 
     async init() {
-        this.hardRefreshInterval = setInterval(() => {
-
-        })
+        this.hardRefreshInterval = setInterval(() => {})
     }
 
     get apiRouter() {
         const router = express.Router()
-        
+
         // Query param or part of url?
         router.get('/usd/:tokenAddress', async (req, res, next) => {
             const tokenAddress = req.params.tokenAddress
             const tokenPrice = await this.getPrice(tokenAddress, false)
             res.send(formatRes(tokenPrice.toString()))
-        }) 
+        })
 
         router.get('/avax/:tokenAddress', async (req, res, next) => {
             const tokenAddress = req.params.tokenAddress
@@ -65,7 +63,7 @@ export class PriceController {
             res.send(formatRes(tokenPrice.toString()))
         })
 
-        return router 
+        return router
     }
 
     protected async getPair(tokenAddress: string): Promise<string | undefined> {
@@ -98,7 +96,11 @@ export class PriceController {
             return this.contracts[tokenAddress]
         }
 
-        const contract = new ethers.Contract(tokenAddress, ERC20, getRandomProvider())
+        const contract = new ethers.Contract(
+            tokenAddress,
+            ERC20,
+            getRandomProvider()
+        )
         this.contracts[tokenAddress] = contract
         return contract
     }
@@ -109,13 +111,25 @@ export class PriceController {
         }
 
         const reserves = await Promise.all([
-            this.getReserves(Address.WAVAX_ADDRESS, Address.USDC_ADDRESS, Address.WAVAX_USDC_ADDRESS),
-            this.getReserves(Address.WAVAX_ADDRESS, Address.WAVAX_USDT_ADDRESS, Address.WAVAX_USDT_ADDRESS)
+            this.getReserves(
+                Address.WAVAX_ADDRESS,
+                Address.USDC_ADDRESS,
+                Address.WAVAX_USDC_ADDRESS
+            ),
+            this.getReserves(
+                Address.WAVAX_ADDRESS,
+                Address.WAVAX_USDT_ADDRESS,
+                Address.WAVAX_USDT_ADDRESS
+            ),
         ])
 
-        const usdcPrice = reserves[0][1].mul(BigNumberMantissa).div(reserves[0][0])
-        const usdtPrice = reserves[1][1].mul(BigNumberMantissa).div(reserves[1][0])
-        const avaxPrice = usdcPrice.add(usdtPrice).div(BigNumber.from("2"))
+        const usdcPrice = reserves[0][1]
+            .mul(BigNumberMantissa)
+            .div(reserves[0][0])
+        const usdtPrice = reserves[1][1]
+            .mul(BigNumberMantissa)
+            .div(reserves[1][0])
+        const avaxPrice = usdcPrice.add(usdtPrice).div(BigNumber.from('2'))
         this.cachedPrices[Address.WAVAX_ADDRESS] = avaxPrice
         return avaxPrice
     }
@@ -135,7 +149,10 @@ export class PriceController {
         return parsedPrice
     }
 
-    protected async getPrice(tokenAddress: string, derived: boolean): Promise<BigNumber> {
+    protected async getPrice(
+        tokenAddress: string,
+        derived: boolean
+    ): Promise<BigNumber> {
         if (tokenAddress === Address.WAVAX_ADDRESS) {
             return await this.getAvaxPrice()
         }
@@ -150,19 +167,33 @@ export class PriceController {
 
         const pairAddress = await this.getPair(tokenAddress)
         if (!pairAddress) {
-            throw new Error(`Error given address ${tokenAddress}, isn't paired with WAVAX on TraderJoe`)
+            throw new Error(
+                `Error given address ${tokenAddress}, isn't paired with WAVAX on TraderJoe`
+            )
         }
 
-        const reserve = await this.getReserves(Address.WAVAX_ADDRESS, tokenAddress, pairAddress)
+        const reserve = await this.getReserves(
+            Address.WAVAX_ADDRESS,
+            tokenAddress,
+            pairAddress
+        )
         const price = reserve[0].mul(BigNumberMantissa).div(reserve[1])
         this.cachedPrices[tokenAddress] = price
-        return derived ? price : this.cachedPrices[Address.WAVAX_ADDRESS].mul(this.cachedPrices[tokenAddress]).div(BigNumberMantissa)
+        return derived
+            ? price
+            : this.cachedPrices[Address.WAVAX_ADDRESS]
+                  .mul(this.cachedPrices[tokenAddress])
+                  .div(BigNumberMantissa)
     }
 
-    protected async getReserves(token0Address: string, token1Address: string, pairAddress: string): Promise<BigNumber[]> {
+    protected async getReserves(
+        token0Address: string,
+        token1Address: string,
+        pairAddress: string
+    ): Promise<BigNumber[]> {
         const decimals = await Promise.all([
             this.getDecimals(token0Address),
-            this.getDecimals(token1Address)
+            this.getDecimals(token1Address),
         ])
 
         const token0Contract = this.getContract(token0Address)
@@ -172,19 +203,27 @@ export class PriceController {
 
         return [
             token0Balance.mul(decimalMultiplier(decimals[0])),
-            token1Balance.mul(decimalMultiplier(decimals[1]))
+            token1Balance.mul(decimalMultiplier(decimals[1])),
         ]
     }
 
-    private static async getPairAddress(tokenAddress: string): Promise<string | undefined> {
+    private static async getPairAddress(
+        tokenAddress: string
+    ): Promise<string | undefined> {
         if (tokenAddress) {
             if (tokenAddress > Address.WAVAX_ADDRESS) {
-                return JoeFactoryContract.getPair(tokenAddress, Address.WAVAX_ADDRESS)
+                return JoeFactoryContract.getPair(
+                    tokenAddress,
+                    Address.WAVAX_ADDRESS
+                )
             } else {
-                return JoeFactoryContract.getPair(Address.WAVAX_ADDRESS, tokenAddress)
+                return JoeFactoryContract.getPair(
+                    Address.WAVAX_ADDRESS,
+                    tokenAddress
+                )
             }
         }
-    
+
         return undefined
     }
 
