# src/server.ts
@@ -9,7 +9,10 @@ import { PriceController } from './routes/price'
 import { NFTController } from './routes/nft'
 import { BankerController } from './routes/banker'
 import { MetricsController } from './routes/metrics'
+import YAML from 'yamljs'
+import { formatRes } from './util/format_res'
 
+const swaggerDoc = YAML.load('./openapi.yaml')
 
 export class Server {
     protected config: Config
@@ -29,9 +32,24 @@ export class Server {
         this.setupDocs()
         this.app.use(bodyParser.json())
         this.app.use(bodyParser.urlencoded({ extended: true }))
-        this.app.get('/ping', (req: Request, res: Response, next: NextFunction) => {
-            res.send('Pong')
-        })
+        this.app.use(
+            (err: Error, req: Request, res: Response, next: NextFunction) => {
+                res.status(500).send(
+                    formatRes(null, {
+                        errorCode: 500,
+                        errorMessage: err.toString(),
+                        errorTrace: err.stack,
+                    })
+                )
+            }
+        )
+
+        this.app.get(
+            '/ping',
+            (req: Request, res: Response, next: NextFunction) => {
+                res.send('Pong')
+            }
+        )
 
         const versionRouter = express.Router()
 
@@ -50,7 +68,9 @@ export class Server {
         versionRouter.use('/nft', nftController.apiRouter)
         this.controllers.push(nftController)
 
-        const bankerController = new BankerController()
+        const bankerController = new BankerController(
+            this.config.config.lendingGraphUrl
+        )
         await bankerController.init()
         versionRouter.use('/lending', bankerController.apiRouter)
         this.controllers.push(bankerController)
@@ -58,15 +78,15 @@ export class Server {
         const metricsController = new MetricsController()
         await metricsController.init()
         versionRouter.use('/metrics', metricsController.apiRouter)
-        this.controllers.push(metricsController)    
-    
+        this.controllers.push(metricsController)
+
         this.app.use(this.config.config.version, versionRouter)
     }
 
     // Starts the server
-    public async start(port: number) {
-        this.httpServer = this.app.listen(port, () => {
-            console.log('Listening on port ', port)
+    public async start() {
+        this.httpServer = this.app.listen(this.config.config.port, () => {
+            console.log('Listening on port ', this.config.config.port)
         })
     }
 
@@ -84,14 +104,6 @@ export class Server {
     }
 
     private async setupDocs() {
-        this.app.use(
-            '/docs',
-            swaggerUi.serve,
-            swaggerUi.setup(undefined, {
-                swaggerOptions: {
-                    url: './swagger.yaml',
-                },
-            })
-        )
+        this.app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDoc))
     }
 }
